# Personal-OfficialWeb

./: .gitignore  BRAND.md  BRAND_VOICE.md  CLAUDE.md  CNAME  COMPONENTS_GUIDE.md  ICON-MIGRATION.md  README.md  _redirects  astro.config.mjs  index.html  logo.ai  main.py  package-lock.json  package.json  pyproject.toml  sitemap.xml  t.html  test.ipynb  test_time_str.py
.claude/: settings.local.json
.github/: FUNDING.yml
app/: __init__.py  builder.py  convert_projects.py  elements.py  variables.py
app/builder/: awards.py  basic.py  home.py  home_index.py  jobs.py  projects.py  projects_home.py  projects_index.py  sitemap.py  skill.py
app/components/: footer.py  navbar.py  person_card.py  project_card.py  webHead.py
app/layouts/: __init__.py  awards.py  home.py  job.py  project.py  projects.py  projects_index.py  skill.py
app/pages/: __init__.py  chenmko.py  digitalOcean.py  (+11 more)
awards/: index.html
jobs/: 2022_Songla.html  2022_songla.html  2023_NthuIr.html  2023_NthuOu.html  2023_Tiic.html  2024_SolwenAi.html  2024_solwenAi.html
knowledge/: index.html
pages/: awards.html  knowledge.html
portfolio-astro/: PROGRESS.md  README.md  package-lock.json  package.json
projects/: chenmko.html  digitalOcean.html  foodome.html  hsCloudMeetingManage.html  hsVmi.html  jobAnalytics2020.html  meowluStockCalc.html  mindReader.html  noDrinkNoDrunk.html  oneDayLover.html  pincakeAi.html  songla.html  songlaMusicCreater.html  stockCalc.html  techlife.html  trelloFinder.html  wpWeb.html
public/: robots.txt
upgrade-plan-docs/: components-migration-plan.md  update-plan.md
(+390 files in other folders)
