[tool.poetry]
name = "personal-officialweb"
version = "0.1.0"
description = ""
authors = ["tony13382 <ttsmcpe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.3"
watchdog = "^6.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
