[tool.poetry]
name = "tony13382-github-io"
version = "0.1.0"
description = ""
authors = ["tony13382 <ttsmcpe@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
